Fix /browse/ overflow-x

--- a/static/scss/browse.scss
+++ b/static/scss/browse.scss
@@ -15,6 +15,7 @@ body {
 }
 .centerBox {
     padding-inline: 1vw;
+    overflow-x: hidden;
     > h4 {
         text-align: center;
         margin: 0;
